--- a/Romanian/main/Music.apk/res/values-ro/strings.xml
+++ b/Romanian/main/Music.apk/res/values-ro/strings.xml
@@ -21,6 +21,8 @@
     <string name="action_item_send">Trimiteţi</string>
     <string name="action_item_share">Distribuiţi</string>
     <string name="action_settings">Setări</string>
+    <string name="ad_close">Închideți</string>
+    <string name="ad_extension">Promoții</string>
     <string name="add_music">Adăugaţi melodii</string>
     <string name="add_to_last_of_playlist">Adaugă la sfârșitul listei de redare</string>
     <string name="alaka_required">"Această melodie nu este disponibilă."</string>
@@ -49,8 +51,11 @@
     <string name="app_downloads">%s descărcări</string>
     <string name="app_label">Descărcări</string>
     <string name="artist">Artişti</string>
+    <string name="artist_album">Albume</string>
+    <string name="artist_favor">Recomandate</string>
     <string name="artist_is_empty">Numele artistului nu poate fi necompletat.</string>
     <string name="artist_name">Artist</string>
+    <string name="artist_news">Noutăți</string>
     <string name="artist_search_title">Artist</string>
     <string name="artist_view">Artist</string>
     <string name="atmd_music">Ultima</string>
@@ -69,6 +74,7 @@
     <string name="being_disable_auto_payment">Dezactivare…</string>
     <string name="being_enable_auto_payment">Activare…</string>
     <string name="bill_list_fragment_title">Chart-uri</string>
+    <string name="billboard_song_subtitle">— %s</string>
     <string name="bluetooth_device">Dispozitiv audio Bluetooth</string>
     <string name="buffering">Încărcare memorie tampon…</string>
     <string name="button_add">Adăugaţi</string>
@@ -96,14 +102,16 @@
     <string name="close_music_time">"Timp rămas: "</string>
     <string name="cloud_enable">Sincronizare muzică cu Mi Cloud</string>
     <string name="cloud_settings">Setări sincronizare</string>
-    <string name="cloud_space_full">Nu mai există spațiu de stocare disponibil în Mi Cloud</string>
+    <string name="cloud_space_full">Nu mai există spațiu de stocare disponibil</string>
     <string name="cloud_space_full_message">Nu mai există spațiu în Mi Cloud pentru a adăuga melodii noi. Pentru a obține spațiu de stocare suplimentar, actualizați contul Mi.</string>
+    <string name="comment_format" formatted="false">%s: %s</string>
     <string name="confirm_delete_downloads_message">%d descărcări vor fi șterse.</string>
     <string name="confirm_delete_the_download_item_message">Ștergeți aceste descărcări?</string>
     <string name="confirm_download">Descărcare</string>
     <string name="confirm_to_renew">Reînnoire</string>
-    <string name="cp_info_first">Serviciul de streaming este oferit de către Ultimate Inc.</string>
+    <string name="cp_info_first">Serviciul de streaming este oferit în principal de către Ultimate Inc.</string>
     <string name="cp_info_second">service1@ultimobi.com</string>
+    <string name="create_order_fail">"Nu s-au putut aranja, încercați din nou."</string>
     <string name="create_playlist">Creaţi o listă de redare</string>
     <string name="create_playlist_failure">Nu s-a putut crea lista de redare</string>
     <string name="current_services">Actual</string>
@@ -206,7 +214,7 @@
     <string name="download_method">Descărcaţi</string>
     <string name="download_no_application_title">"Nu se poate deschide fișierul"</string>
     <string name="download_paused">Descărcarea a fost oprită</string>
-    <string name="download_paused_in_power_save_mode">Descărcările curente au fost oprite de către modul Economisire energie</string>
+    <string name="download_paused_in_power_save_mode">Sarcinile de descărcare sunt oprite când modul Economisire energie este activ</string>
     <string name="download_pending">Se așteaptă descărcarea</string>
     <string name="download_percent">%d%%</string>
     <string name="download_processing">Descărcare…</string>
@@ -303,6 +311,8 @@
     <string name="filter_by_size_prefix">"Se ascund fişierele mai mici de "</string>
     <string name="filter_by_size_summary">Se ascund fişierele audio mici</string>
     <string name="find_music">Descoperiţi melodii</string>
+    <string name="follow">Urmăriți</string>
+    <string name="followed">Urmărit</string>
     <string name="force_touch_audio_picker">Recunoaștere melodie</string>
     <string name="force_touch_play_local_music_random">Amestecarea melodiilor din telefon</string>
     <string name="format_not_support">Acest format nu este acceptat.</string>
@@ -357,6 +367,12 @@
     <string name="local_music_empty">Lista de redare locală este goală</string>
     <string name="local_music_empty_goto_online">Nu s-au găsit melodii</string>
     <string name="local_music_is_not_available">Muzica locală nu este disponibilă.</string>
+    <string name="local_page_artist">Artiști pe care îi urmăriți</string>
+    <string name="local_page_custom_subtitle">Melodii noi în fiecare zi</string>
+    <string name="local_page_custom_title">Pentru tine</string>
+    <string name="local_page_song_all">Toate melodiile</string>
+    <string name="local_page_song_download">Melodii din telefon</string>
+    <string name="local_page_song_favorite">Melodii favorite</string>
     <string name="local_tracks_short">Muzică locală</string>
     <string name="login_first">Este necesar să vă conectați la contul Mi mai întâi</string>
     <string name="lrc_search_failed">Versurile nu au fost găsite</string>
@@ -399,7 +415,7 @@
     <string name="miuishare_share_editor_title">Distribuiţi</string>
     <string name="miuishare_title_more">Mai multe</string>
     <string name="miuishare_title_share">Distribuiţi</string>
-    <string name="miuishare_wechat_timeline_title">Wechat Timeline</string>
+    <string name="miuishare_wechat_timeline_title">Wechat Moments</string>
     <string name="miuishare_weibo_title">Weibo</string>
     <string name="mobile_recommended_title">Utilizare date mobile</string>
     <string name="modify_lyric">Editaţi versurile</string>
@@ -487,11 +503,16 @@
     <string name="nowplaying_menu_item_delete">Ştergeţi</string>
     <string name="ok">OK</string>
     <string name="one_month">O lună</string>
+    <string name="online_bill">Topuri</string>
+    <string name="online_favor">Recomandate</string>
+    <string name="online_fm">FM</string>
     <string name="online_list_delete_message">Toate melodiile descărcate din această listă de redare vor fi șterse de pe dispozitiv.</string>
     <string name="online_music_enabled_subtitle">Atingeți pentru a reda în flux melodiile preferate.</string>
     <string name="online_music_enabled_summary">Ascultaţi și descărcaţi melodiile preferate. Vizualizaţi melodiile de top și listele de redare organizate oriunde aţi merge!</string>
     <string name="online_music_enabled_title">Streaming-ul gratuit este aici</string>
     <string name="online_playlist_is_empty">Listă de redare goală</string>
+    <string name="online_recommend">Recomandate</string>
+    <string name="online_special">Speciale</string>
     <string name="open_download">Deschideți</string>
     <string name="order_pending">Aşteptarea confirmării...</string>
     <string name="order_process_fail">Nu s-a putut autoriza contul dvs. Așteptați câteva minute și încercați din nou.</string>
@@ -519,6 +540,12 @@
     <string name="playback_failed_no_title_by_bad_file">Melodia nu poate fi redată. Formatul nu este acceptat sau fișierul nu există.</string>
     <string name="playlist_deleted_message">Listă de redare ştearsă</string>
     <string name="playlist_renamed_message">Listă de redare redenumită</string>
+    <string name="playlist_type_album">Albume</string>
+    <string name="playlist_type_artist">Artist</string>
+    <string name="playlist_type_billboard">Topuri</string>
+    <string name="playlist_type_fm">FM</string>
+    <string name="playlist_type_my">Listele mele</string>
+    <string name="playlist_type_recommend">Liste recomandate</string>
     <string name="playlist_unavailable">Lista de redare nu este disponibilă. Pentru a o șterge, apăsați și țineți apăsat, apoi selectați Ștergere.</string>
     <string name="please_download_first">Trebuie să descărcaţi această melodie înainte de a o putea utiliza ca ton de apel</string>
     <string name="please_search_or_select">Căutați sau selectați un câmp</string>
@@ -544,6 +571,9 @@
     <string name="privacy_tip_title">Utilizați acceleratorul Xunlei?</string>
     <string name="project_device">Telefon Mi</string>
     <string name="project_device_mobile">Dispozitiv mobil</string>
+    <string name="pulluprefreshrecyclerview_loading_error">"Nu s-a putut încărca"</string>
+    <string name="pulluprefreshrecyclerview_loading_finished">Încărcată cu succes</string>
+    <string name="pulluprefreshrecyclerview_loading_running">Se încarcă…</string>
     <string name="radar">ACRCloud</string>
     <string name="radar_click_to_retry">Apăsați pentru a reîncerca</string>
     <string name="radar_fail">Niciun rezultat</string>
@@ -617,14 +647,17 @@
     <string name="settings_notification_title">Widget în panoul de notificări</string>
   <string name="settings_search_key_desktop_lyric">Versuri în ecranul principal;Versuri;Muzică;Melodii</string>
   <string name="settings_search_key_download_quality">Calitatea decărcărilor?;Calitate;Muzică;Descărcare;Melodii</string>
-  <string name="settings_search_key_download_when_favorite">Descărcare favorite;Decărcare;Favorite;Muzică;Melodii</string>
+  <string name="settings_search_key_download_when_favorite">Descărcare favorite;Descărcare;Favorite;Muzică;Melodii</string>
+  <string name="settings_search_key_main">Muzică;Melodii</string>
   <string name="settings_search_key_notification">Notificări muzică;Muzică;Notificări;melodii</string>
   <string name="settings_search_key_vip_service">Melodii premium;VIP;Pachet de melodii;Pachet de Melodii Premium;Membru;Abonament;Muzică;Melodii</string>
   <string name="settings_search_path_advance">Aplicații de sistem/Muzică/Serviciu și setări/Setări avansate</string>
+    <string name="settings_search_path_main">Aplicații de sistem/Muzică</string>
   <string name="settings_search_path_normal">Aplicații de sistem/Muzică/Serviciu și setări</string>
   <string name="settings_search_title_desktop_lyric">Versuri pe ecranul principal</string>
   <string name="settings_search_title_download_quality">Calitatea descărcării</string>
   <string name="settings_search_title_download_when_favorite">Descărcare favorite</string>
+    <string name="settings_search_title_main">Muzică</string>
   <string name="settings_search_title_notification">Notificări muzică</string>
   <string name="settings_search_title_vip_service">Melodii Premium</string>
     <string name="share_append_text">Din @MIUI</string>
@@ -699,7 +732,7 @@
     <string name="toast_cancel_play">Redarea a fost oprită</string>
     <string name="toast_download_error_by_count_limit">"Ați atins limita de descărcări pentru luna aceasta."</string>
     <string name="toast_download_error_by_vip_required">Obțineți un pachet de Melodii Premium pentru a descărca această melodie.</string>
-    <string name="toast_download_in_process">Descărcare în curs...</string>
+    <string name="toast_download_in_process">Descărcare în curs</string>
     <string name="toast_normal_songs_for_download">Calitatea melodiilor descărcate a fost stabilită la Standard</string>
     <string name="toast_normal_songs_for_stream">Calitatea melodiilor ascultate online a fost stabilită la Standard</string>
     <string name="toast_stream_normal">În prezent se redau melodiile la calitate standard. Obțineți un pachet de Melodii Premium pentru a asculta la calitate înaltă.</string>
